--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,56 @@
 header{
     border: 3px solid black;
     font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    margin: 15px auto;
+     height: 150px;
+     width: 80%;
+}
+
+
+.underscore {
+    border: 3px solid black;
+    font-size: 100px;
     text-align: center;
     margin: 0 auto;
-     height: 150px;
-     widows: 80%;;
+     height: 130px;
+     width: 60%;
+
+}
+
+.guesses-so-far{
+    border: 1px solid black;
+    font-size: 20px;
+    text-align: center;
+    margin: 15px auto;
+     height: 120px;
+     width: 40%;
+}
+
+.guesses-left {
+    border: 1px solid black;
+    font-size: 20px;
+    text-align: center;
+    margin: 15px auto;
+     height: 120px;
+     width: 40%;
+}
+
+.wins {
+    border: 1px solid black;
+    font-size: 20px;
+    text-align: center;
+    margin: 15px auto;
+     height: 100px;
+     width: 30%;
+}
+
+.loses {
+    border: 1px solid black;
+    font-size: 20px;
+    text-align: center;
+    margin: 15px auto;
+     height: 100px;
+     width: 30%;
 }
